# avrIntepreter

./: .gitignore  CMakeLists.txt  Eval.cpp  Eval.h  README.md  example.avr  main.avr  main.cpp
.github/workflows/: release.yml
avr/: CHANGELOG.md  language-configuration.json  package.json  vsc-extension-quickstart.md
avr/syntaxes/: avr.tmLanguage.json
avr/themes/: avr-color-theme.json
examples/: main.avr
include/avrInterpreter/: Eval.h  Interpreter.h
src/: Eval.cpp  Interpreter.cpp  main.cpp
